--- a/src/index.css
+++ b/src/index.css
@@ -5,23 +5,39 @@
 
 
 
-body{
+body {
     font-family: "Exo 2", sans-serif;
 }
 
-.title-color{
+.title-color {
     color: rgb(17, 17, 17);
 }
-.accent-color{
+
+.accent-color {
     color: #757575;
 }
 
-.theme-color{
+.theme-color {
     background: rgb(96, 71, 236);
 }
 
-.link-color{
+.link-color {
     color: rgb(96, 71, 236);
+}
+
+.book-mark-bg {
+    background: rgba(17, 17, 17, 0.05);
+}
+
+.book-mark-top {
+    box-sizing: border-box;
+    border: 1px solid rgb(96, 71, 236);
+    border-radius: 8px;
+    background: rgba(96, 71, 236, 0.1);
+    color: rgb(96, 71, 236);
+    font-weight: 700;
+    font-size: 24px;
+    text-align: center;
 }
 
 /* title  color code in hax - #111111 */
